# drc

./: .dockerignore  .gitignore  Dockerfile  HANDOFF-agentic-drc.md  Makefile  PROGRESS-agentic-drc.json  PROGRESS-agentic-drc.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/api/: deps.py
backend/core/: drc_runner.py  error_hints.py  geometry_utils.py  layout.py  lvs_models.py  lvs_parser.py  lvs_runner.py  sandbox.py  spatial_index.py  violation_models.py  violation_parser.py
backend/export/: gdsii.py  report.py
backend/fix/: autofix.py  clustering.py  engine.py  fix_models.py  validator.py
backend/jobs/: database.py  manager.py
backend/pcell/: __init__.py  base.py  capacitor.py  mosfet.py  resistor.py
backend/pdk/: knowledge.py  registry.py  schema.py
docs/: INSIGHTS-agentic-drc.md  pdk-authoring.md  plan-phase5.md  tmp-cicd-plan.md  tmp-deploy-plan.md  tmp-error-hints-plan.md
docs/archive/: archive-progress-agentic-drc.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
prds/phase-5a-async-autofix/: .ralph-last-branch  prd.json  progress.txt
prds/phase-5b-lvs/: .ralph-last-branch  prd.json  progress.txt
prds/phase-5c-pcell/: .ralph-last-branch  prd.json  progress.txt
tests/integration/: test_e2e_drc.py  test_e2e_phase5.py  test_memory_profiling.py
tests/unit/: test_api_coverage.py  test_api_lvs.py  test_api_pcell.py  test_api_routes.py  test_async_drc.py  test_autofix.py  test_clustering.py  test_database.py  test_density_strategy.py  test_drc_runner.py  (+26 more)
(+47 files in other folders)
