[build-system]
requires = ["setuptools>=75.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-drc"
version = "0.1.0"
description = "Open-source DRC tool for semiconductor layout verification"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "gdstk>=0.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "Rtree>=1.3",
    "python-multipart>=0.0.18",
    "klayout>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires KLayout CLI in PATH",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
